--- a/ecm.html
+++ b/ecm.html
@@ -6,7 +6,7 @@
   <title>ECM Section A Quiz</title>
   <style>
     :root{
-      --bg:#000;
+      --bg:#fff;
       --panel:#0b0b0f;
       --text:#eaeaea;
       --muted:#b7b7b7;
