--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>K53-SA</title>
     <!--<link rel="stylesheet" type="text/css" href="./css/style.css">-->
+  <!-- PWA basics -->
+  <meta name="theme-color" content="#000000" />
+  <link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
+  <link rel="icon" href="/img/images.png" type="image/png" />
+  <link rel="apple-touch-icon" href="/images192.png" />
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" type="image/ico" href="./img/images.png">
     <link rel="manifest" href="manifest.json">
@@ -30,7 +35,12 @@
             <a href="./home_images/home.html" class="btn">Start...</a>
         </div>
     </div>
-
+  <!-- Install banner (hidden by default) -->
+  <div id="installBanner" style="display:none; position:fixed; bottom:16px; left:16px; right:16px; padding:12px; background:#111; color:#fff; border-radius:8px; z-index:9999;">
+    <span>Install FREEK53 for faster offline use?</span>
+    <button id="installBtn" style="margin-left:12px; padding:6px 12px;">Install</button>
+    <button id="installClose" style="margin-left:8px; padding:6px 12px;">Not now</button>
+  </div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
     <script>
@@ -57,49 +67,36 @@
 
 <script type="text/javascript">
     
-if ('serviceWorker' in navigator) {
-  window.addEventListener('load', function() {
-    navigator.serviceWorker.register('sw.js').then(function(registration) {
-      // Registration was successful
-      console.log('ServiceWorker registration successful with scope: ', registration.scope);
-    }, function(err) {
-      // registration failed :(
-      console.log('ServiceWorker registration failed: ', err);
+// Install prompt
+    let deferredPrompt = null;
+    const banner = document.getElementById('installBanner');
+    const installBtn = document.getElementById('installBtn');
+    const installClose = document.getElementById('installClose');
+
+    function showInstallPromotion() { banner.style.display = 'block'; }
+    function hideMyInstallPromotion() { banner.style.display = 'none'; }
+
+    window.addEventListener('beforeinstallprompt', (e) => {
+      // Stop the auto prompt
+      e.preventDefault();
+      deferredPrompt = e;
+      showInstallPromotion();
     });
-  });
-}
 
-let deferredPrompt;
+    installBtn.addEventListener('click', async () => {
+      hideMyInstallPromotion();
+      if (!deferredPrompt) return;
+      deferredPrompt.prompt();
+      const choice = await deferredPrompt.userChoice;
+      if (choice.outcome === 'accepted') {
+        showSnack('Thanks! Installing…');
+      } else {
+        showSnack('Install dismissed');
+      }
+      deferredPrompt = null;
+    });
 
-window.addEventListener('beforeinstallprompt', (e) => {
-  // Prevent the mini-infobar from appearing on mobile
-  e.preventDefault();
-  // Stash the event so it can be triggered later.
-  deferredPrompt = e;
-  // Update UI notify the user they can install the PWA
-  showInstallPromotion();
-});
-
-
-
-buttonInstall.addEventListener('click', (e) => {
-  // Hide the app provided install promotion
-  hideMyInstallPromotion();
-  // Show the install prompt
-  deferredPrompt.prompt();
-  // Wait for the user to respond to the prompt
-  deferredPrompt.userChoice.then((choiceResult) => {
-    if (choiceResult.outcome === 'accepted') {
-      console.log('User accepted the install prompt');
-    } else {
-      console.log('User dismissed the install prompt');
-    }
-  })
-});
-
-
-
-
-
+    installClose.addEventListener('click', hideMyInstallPromotion);
 
 </script>
+
