--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>Multiple Choice Questions</p>
             <a href="./home_images/home.html" class="btn">Start...</a>
         </div>
-  <div id="installBanner" style=" position:fixed; bottom:16px; left:16px; right:16px; padding:12px; background:#111; color:#fff; border-radius:8px; z-index:9999;">
+  <div id="installBanner" style=" display:none; position:fixed; bottom:16px; left:16px; right:16px; padding:12px; background:#111; color:#fff; border-radius:8px; z-index:9999;">
     <span>Install FREEK53 for faster offline use?</span>
     <button id="installBtn" style="margin-left:12px; padding:6px 12px;">Install</button>
     <button id="installClose" style="margin-left:8px; padding:6px 12px;">Not now</button>
@@ -130,3 +130,4 @@
 
   installClose.addEventListener('click', hideMyInstallPromotion);
 </script>
+
