--- a/K53_Sign_Test/road_sign_test5.html
+++ b/K53_Sign_Test/road_sign_test5.html
@@ -24,7 +24,7 @@
     <h3>Question 1 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -106,7 +106,7 @@
     <h3>Question 2 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -188,7 +188,7 @@
     <h3>Question 3 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -270,7 +270,7 @@
     <h3>Question 4 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -352,7 +352,7 @@
     <h3>Question 5 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -401,7 +401,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -475,7 +475,7 @@
     <h3>Question 6 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -557,7 +557,7 @@
     <h3>Question 7 of   30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -639,7 +639,7 @@
     <h3>Question 8 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -721,7 +721,7 @@
     <h3>Question 9 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -803,7 +803,7 @@
     <h3>Question 10 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -854,7 +854,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -922,7 +922,7 @@
     <h3>Question 11 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1004,7 +1004,7 @@
     <h3>Question 12 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1086,7 +1086,7 @@
     <h3>Question 13 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1168,7 +1168,7 @@
     <h3>Question 14 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1250,7 +1250,7 @@
     <h3>Question 15 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1299,7 +1299,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1397,7 +1397,7 @@
     <h3>Question 16 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -1489,7 +1489,7 @@
     <h3>Question 17 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1571,7 +1571,7 @@
     <h3>Question 18 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1653,7 +1653,7 @@
     <h3>Question 19 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1735,7 +1735,7 @@
     <h3>Question 20 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1786,7 +1786,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1853,7 +1853,7 @@
     <h3>Question 21 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1935,7 +1935,7 @@
     <h3>Question 22 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2017,7 +2017,7 @@
     <h3>Question 23 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2099,7 +2099,7 @@
     <h3>Question 24 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2181,7 +2181,7 @@
     <h3>Question 25 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2263,7 +2263,7 @@
     <h3>Question 26 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2313,7 +2313,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2387,7 +2387,7 @@
     <h3>Question 27 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2469,7 +2469,7 @@
     <h3>Question 28 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2551,7 +2551,7 @@
     <h3>Question 29 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2602,7 +2602,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2670,7 +2670,7 @@
     <h3>Question 30 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -3257,6 +3257,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
